<resources>
    <string name="app_name">Saúde</string>

    <string name="login_hint_email">Email</string>
    <string name="login_hint_senha">Senha</string>
    <string name="login_btn_entrar">Entrar</string>
    <string name="login_btn_registrar">Não tem uma conta? Registre-se</string>
    <string name="login_dlg_erro_titulo">Falha ao fazer login</string>
    <string name="login_pdlg_acessando_conta">Acessando a conta, \naguarde…</string>

    <string name="cadastro_hint_nome">Nome Completo</string>
    <string name="cadastro_hint_email">Email</string>
    <string name="cadastro_hint_senha">Senha</string>
    <string name="cadastro_hint_confirmar_senha">Confirmar Senha</string>
    <string name="cadastro_hint_tel">Telefone</string>
    <string name="cadastro_hint_end">Endereço</string>
    <string name="cadastro_btn_criar_conta">Criar Conta</string>
    <string name="cadastro_btn_acessar_conta">Acesse sua conta</string>
    <string name="cadastro_foto">Foto do usuário</string>
    <string name="cadastro_erro_senhas_diferentes">\nAs senhas precisam ser idênticas</string>
    <string name="cadastro_erro_registro">Não foi possível criar a conta</string>
    <string name="cadastro_erro_titulo">Erro</string>
    <string name="cadastro_toast_conta_criada">Conta criada</string>
    <string name="cadastro_pdlg_criando_conta">Criando conta, \naguarde…</string>

    <string name="erro_campo_obrigatorio">Campo obrigatório</string>
    <string name="erro_email">Digite um email válido</string>
    <string name="erro_tamanho_senha">A senha deve conter no mínimo 6 caracteres</string>
    <string name="erro_confirmar_senha">As senhas precisam ser idênticas</string>
    <string name="erro_firebase_cadastro_generico">\nNão foi possivel criar a conta. \nTente novamente mais tarde</string>
    <string name="erro_firebase_cadastro_tamanho_senha">\nA senha deve conter no mínimo 6 caracteres</string>
    <string name="erro_firebase_cadastro_email">\nDigite um email válido</string>
    <string name="erro_firebase_cadastro_email_usado">\nEsse email já está sendo usado</string>
    <string name="erro_firebase_cadastro_internet">Não foi possível criar a conta. \nVerifique sua conexão com a internet</string>
    <string name="erro_firebase_login_internet">Não foi possível entrar. \nVerifique sua conexão com a internet.</string>
    <string name="erro_firebase_login_generico">Não foi possível entrar. \nTente novamente mais tarde.</string>
    <string name="erro_firebase_login_credenciais">\nEmail e/ou senha incorretos</string>

    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_aplicar">Aplicar</string>

    <string name="btn_ok">OK</string>

    <string name="tab_proximos">PRÓXIMOS</string>
    <string name="tab_mapa">MAPA</string>
    <string name="tab_favoritos">Favoritos</string>

    <string name="main_hint_pesquisar">Pesquisar…</string>
    <string name="main_title_pesquisar">Pesquisar</string>
    <string name="main_title_filtrar">Filtrar</string>
    <string name="main_dlg_sobre">Desenvolvido por:\n\nDaniel Sousa\nsousa.dfs@gmail.com</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
